Cambio en menu principal

--- a/BITLAB-war/web/docente.xhtml
+++ b/BITLAB-war/web/docente.xhtml
@@ -12,11 +12,11 @@
 
         <ui:composition template="./template.xhtml">
 
-            <ui:define name="prueba-menu">
+            <ui:define name="docente-menu">
                 <li class="nav-item">
-                    <a href="prueba.bitlab" class="nav-link active">
-                        <i class="fas fa-table nav-icon"></i>
-                        <p>Docente</p>
+                    <a href="docente.bitlab" class="nav-link active">
+                        <i class="fas fa-chalkboard-teacher nav-icon"></i>
+                        <p>Gestion de docentes</p>
                     </a>
                 </li>
             </ui:define>
